<?xml version="1.0"?>
<package format="2">
<name>ros2_components</name>
<version>0.0.0</version>
<description>ros2_components</description>
<maintainer email="none@example.com">None</maintainer>
<license>?</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>builtin_interfaces</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>rmw_implementation</build_depend>
    <build_depend>rmw_implementation_cmake</build_depend>
    <build_depend>ros2_components_msg</build_depend>
    <build_depend>ros2_simple_logger</build_depend>
    <exec_depend>builtin_interfaces</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rmw_implementation</exec_depend>
    <exec_depend>ros2_components_msg</exec_depend>
    <exec_depend>ros2_simple_logger</exec_depend>
    <export>
    <build_type>ament_cmake</build_type>
</export>
</package>
